--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,23 +3,16 @@
 	border-radius: 99rem !important;
 }
 
-/* A fix that makes Bootstrap buttons centered */
+/* Centered buttons */
 button {
 	margin: 0 auto;
 	display: block;
 }
 
-/* black slider bars. */
-input[type=range]::-webkit-slider-runnable-track {
-	background: #000000;
-}
-input[type=range]::-moz-range-track {
-	background: #000000;
-}
-
 .rainbow-text {
   background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-  -webkit-background-clip: text; /* firefox is dead */
+  -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
